# snafu

./: .gitignore  README.md  makefile
Documentation/: Doxyfile  README.md  main.md
design/: addressdb_flow.dot  aframe.md  architecture.md  bindmount.md  codelayo.dot  config.md  dcel_example.yaml  dcel_functions.md  devorder.dot  encryption_based_acl.md  grid_commands.md  grid_instruction_engine.md  grid_message.md  grid_topology.md  gridclient.md  griddb.md  gridhost_urls.db.design  griduserd.md  hiena_mapping_engine.md  libaddressdb.md  limits.md  prod_instr.md  snafu.md  uri_pathwalk.md
src/: griddb.c  griduser.c  hnfc.c  snafu.c
src/lib/: addressdb.c  addressdb.h  aframe.c  aframe.h  buflink.c  buflink.h  config.c  config.h  cosm.c  cosm.h  cosmos_grid.h  dcel.c  dcel.h  gridclient.c  gridclient.h  griddb.c  griddb.h  griddb_client.c  griddb_client.h  griddbmsg.c  griddbmsg.h  griddbsock.c  griddbsock.h  gridmsg.c  gridmsg.h  gridmsg_engine.c  gridmsg_engine.h  gridsock.c  gridsock.h  griduser.h  lookup_module.c  lookup_module.h  old-gridclient.c  server_module.c  server_module.h  snafu_fh.h  snafu_ino.h  (+4 more)
src/module/lookup/fudge-old/: .gitignore  Makefile.am  Makefile.bu  configure.ac  fudge-tester  fudge-tester.c  fudge_bison.c  fudge_bison.h  fudge_bison.y  fudge_flex.c  fudge_flex.l  fudge_flex.l.boneyard  fudgelang.rmks
test/: test_dcel_production.c  test_frag_union.c  test_gridclient  test_gridclient.c  test_gridclient_get_username  test_gridclient_get_username.c  test_griddb.c  test_gridmsg.c  test_gridmsg_engine.c  test_gridmsg_engine.sh
(+17 files in other folders)
